<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/emojiTest"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".annotation.AnnotatingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/totalDistanceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/startDateTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="TextView" />

            <TextView
                android:id="@+id/typeChipGroupLabelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Activity type"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/typeChipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/typeChip1"
                        style="@style/EmojiChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/typeChip1" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/typeChip2"
                        style="@style/EmojiChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/typeChip2" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/typeChip3"
                        style="@style/EmojiChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/typeChip3" />

                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>

            <TextView
                android:id="@+id/typeChipGroupLabelText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="How was it?"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/opinionChipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/opinionChip1"
                        style="@style/EmojiChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/opinionChip1" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/opinionChip2"
                        style="@style/EmojiChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/opinionChip2" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/opinionChip3"
                        style="@style/EmojiChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/opinionChip3" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/opinionChip4"
                        style="@style/EmojiChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/opinionChip4" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/opinionChip5"
                        style="@style/EmojiChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/opinionChip5" />

                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>

            <TextView
                android:id="@+id/typeChipGroupLabelText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Weather"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/weatherChipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/weatherChip1"
                        style="@style/EmojiChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weatherChip1" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/weatherChip2"
                        style="@style/EmojiChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weatherChip2" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/weatherChip3"
                        style="@style/EmojiChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weatherChip3" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/weatherChip4"
                        style="@style/EmojiChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weatherChip4" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/weatherChip5"
                        style="@style/EmojiChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weatherChip5" />

                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="saveExerciseData"
                android:text="save" />

            <Button
                android:id="@+id/Show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showStuffTemp"
                android:text="show" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>